# g4-ams-test

./: .gitignore  CMakeLists.txt  g4amstest.cc  g4amstest.in  vis.mac
include/: AMSTestActionInitialization.hh  AMSTestAnalysis.hh  AMSTestDetectorConstruction.hh  AMSTestDetectorConstructionMessenger.hh  AMSTestPrimaryGeneratorAction.hh  AMSTestRunAction.hh  AMSTestSteppingAction.hh
src/: AMSTestActionInitialization.cc  AMSTestDetectorConstruction.cc  AMSTestDetectorConstructionMessenger.cc  AMSTestPrimaryGeneratorAction.cc  AMSTestRunAction.cc  AMSTestSteppingAction.cc
